# QwenPaw-EEG

./: .gitignore  pyproject.toml
mne-eeg-learning/notebooks/: dummy_raw.fif  solution-ica.fif  us001_first_steps.ipynb  us002_core_structures.ipynb  us003_io_formats.ipynb  us004_preprocessing.ipynb  us005_ica.ipynb  us006_epoching.ipynb  us007_viz_tfr.ipynb  us008_BCICIV_2a.ipynb  us008_BNCI2014_001.ipynb  us008_end_to_end.ipynb  us009_source_localization.ipynb
mne-eeg-learning/notes/: us001_key_points.md  us002_key_points.md  us003_key_points.md  us004_key_points.md  us005_key_points.md  us006_key_points.md  us007_key_points.md  us008_key_points.md  us009_key_points.md
mne-eeg-learning/scripts/: us000_path.py  us001_demo.py  us002_data_structures.py  us003_io_formats.py  us004_preprocessing.py  us005_ica.py  us006_epoching.py  us007_viz_tfr.py  us008_end_to_end.py  us009_source_loc.py
