[project]
name = "eeg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipympl>=0.10.0",
    "matplotlib>=3.10.9",
    "mne>=1.12.1",
    "mne-qt-browser>=0.7.4",
    "pandas>=3.0.2",
    "pyqt6>=6.11.0",
    "scikit-learn>=1.8.0",
]

[dependency-groups]
dev = [
    "notebook>=7.5.5",
]
